idf_component_register(SRCS "app_ble_mesh.c"
							"app_ble.c"
							"app_bm_general.c"
							"app_button.c"
							"app_button_CAP1206.c"
							"app_button_CY8CMBR3xxx.c"
							"app_cmd_mgr.c"
							"app_common.c"
							"app_endpoint_link.c"
							"app_fs_mgr.c"
							"app_gpio.c"
							"app_led_rgb.c"
							"app_main.c"
							"app_mqtt.c"
							"app_ota.c"
							"app_schedule.c"
							"app_spiffs.c"
							"app_time_server.c"
							"app_udp.c"
							"app_wifi_mode.c"
							"I2C.c"
							"led_strip_rmt_ws2812.c"	
                    INCLUDE_DIRS ".")